--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,52 @@ body {
   background-color: #111827;
   color: #ffffff;
 }
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #2d3748 #1a202c;
+}
+
+
+html::-webkit-scrollbar {
+  width: 12px;
+}
+
+html::-webkit-scrollbar-track {
+  background: #1a202c;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #2d3748;
+  border-radius: 10px; 
+  border: 3px solid #1a202c; 
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #4a5568;
+}
+
+
+body {
+  scrollbar-width: thin;
+  scrollbar-color: #2d3748 #1a202c;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #1a202c;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #2d3748;
+  border-radius: 10px; 
+  border: 3px solid #1a202c; 
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #4a5568;
+}
+
